--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
         "calibration_image" : "../../raw/camera0/shadowgraph/median_image.jpg"
     },
     "classification" : {
-        "model_name" : "iota61short",
+        "model_name" : "iota121v1",
         "model_dir" : "../../model",
         "scnn_instances" : 1,
         "fast_scratch" : "/tmp",
